# bmstu-cw-cg-volumetric-clouds

./: .gitignore  Cargo.toml  README.md  test.txt
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: camera.rs  lib.rs  utils.rs
doc/: 01-contents.tex  02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex  50-conclusion.tex  51-biblio.bib  51-biblio.tex  60-addition.tex  Makefile  preamble.tex  report.tex
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/canvas/: mod.rs
domain/src/canvas/painter/: mod.rs  painter.rs
domain/src/facade/: facade.rs  mod.rs
domain/src/facade/command/: camera_command.rs  draw_command.rs  mod.rs  object_command.rs  scene_command.rs
domain/src/managers/: camera_manager.rs  draw_manager.rs  mod.rs  object_manager.rs  scene_manager.rs
domain/src/math/: matrix.rs  mod.rs  transform.rs  vec.rs
domain/src/object/: camera.rs  cloud.rs  mod.rs
domain/src/object/objects/: bounding_box.rs  cloud.rs  grid.rs  mod.rs  sun.rs  terrain.rs  texture3d.rs
domain/src/object/objects/textures/: mod.rs  texture2d.rs  texture3d.rs
domain/src/scene/: mod.rs  scene.rs  scene_composite.rs
domain/src/visitor/: draw_visitor.rs  mod.rs
perlin/: Cargo.toml
perlin/src/: main.rs
research/: Cargo.toml
research/plot/: main.py  perlin.py
research/src/: main.rs
src/: app.rs  config.rs  main.rs
src/domain/facade/: facade.rs  mod.rs
src/domain/facade/command/: object_command.rs
test/: test.py
worley/: Cargo.toml
worley/src/: main.rs
