[package]
name = "coursework"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "coursework"
path = "src/main.rs"

[dependencies]
domain = { path = "domain" }
core = { path = "core" }
env_logger = "0.11.5"
log = "0.4.22"

[workspace]

[workspace.dependencies]
env_logger = "0.11.5"
anyhow = "1.0.86"
log = "0.4.22"