[package]
name = "coursework"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "coursework"
path = "src/main.rs"

[dependencies]
domain = { path = "domain" }
env_logger = { workspace = true }
log = { workspace = true }
eframe = { workspace = true }
rayon = { workspace = true }

[workspace]
members = ["worley", "perlin", "research"]

[workspace.dependencies]
env_logger = "0.11.5"
anyhow = "1.0.86"
log = "0.4.22"
eframe = { version = "0.29.1" }
egui = { version = "0.29.1", features = ["serde", "mint"] }
glam = { version = "0.29.0", features = ["serde", "mint"] }
mint = "0.5.9"
rayon = "1.10.0"
