[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
glam = { workspace = true, features = ["serde", "mint"] }
egui = { workspace = true, features = ["serde", "mint"] }
mint = { workspace = true }
rand = "0.8.5"
rayon = "1.10.0"